--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ URL: https://github.com/pvrqualitasag/qgert
 BugReports: https://github.com/pvrqualitasag/qgert/issues
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 2.1.0)
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
