--- a/inst/templates/bash/bash_script_so.template
+++ b/inst/templates/bash/bash_script_so.template
@@ -4,6 +4,11 @@
 #' date:  __STARTDATE__
 #' author: __AUTHOR__
 #' ---
+#' ## Purpose
+#' {Write a paragraph about what problems are solved with this script.}
+#'
+#' ## Description
+#' {Write a paragraph about how the problems are solved.}
 #+ bash-env-setting, eval=FALSE
 set -o errexit    # exit immediately, if single command exits with non-zero status
 set -o nounset    # treat unset variables as errors
@@ -26,12 +31,12 @@ INSTALLDIR=`$DIRNAME ${BASH_SOURCE[0]}`    # installation dir of bashtools on ho
 #' ### Files
 #+ script-files, eval=FALSE
 SCRIPT=`$BASENAME ${BASH_SOURCE[0]}`       # Set Script Name variable                #
-SERVER=`hostname`                          # put hostname of server in variable      #  
+SERVER=`hostname`                          # put hostname of server in variable      #
 
 
 
 #' ## Functions
-#' In this section user-defined functions that are specific for this script are 
+#' In this section user-defined functions that are specific for this script are
 #' defined in this section.
 #'
 #' * title: Show usage message
@@ -125,8 +130,8 @@ done
 
 shift $((OPTIND-1))  #This tells getopts to move on to the next argument.
 
-#' ## Checks for Command Line Arguments 
-#' The following statements are used to check whether required arguments 
+#' ## Checks for Command Line Arguments
+#' The following statements are used to check whether required arguments
 #' have been assigned with a non-empty value
 #+ argument-test, eval=FALSE
 if test "$a_example" == ""; then
@@ -144,4 +149,9 @@ fi
 #' ## End of Script
 #+ end-msg, eval=FALSE
 end_msg
+
+
+#' ## Latest Update
+#+ latest-update, eval=TRUE
+date
 
