--- a/inst/templates/bash/bash_script_ut.template
+++ b/inst/templates/bash/bash_script_ut.template
@@ -4,6 +4,11 @@
 #' date:  __STARTDATE__
 #' author: __AUTHOR__
 #' ---
+#' ## Purpose
+#' {Write a paragraph about what problems are solved with this script.}
+#'
+#' ## Description
+#' {Write a paragraph about how the problems are solved.}
 #+ bash-env-setting, eval=FALSE
 set -o errexit    # exit immediately, if single command exits with non-zero status
 set -o nounset    # treat unset variables as errors
@@ -36,7 +41,7 @@ source $UTIL
 
 
 #' ## Functions
-#' In this section user-defined functions that are specific for this script are 
+#' In this section user-defined functions that are specific for this script are
 #' defined in this section.
 
 
@@ -79,13 +84,13 @@ while getopts ":a:b:ch" FLAG; do
       usage "Invalid command line argument (-$OPTARG) found"
       ;;
   esac
-done  
+done
 
 shift $((OPTIND-1))  #This tells getopts to move on to the next argument.
 
 
-#' ## Checks for Command Line Arguments 
-#' The following statements are used to check whether required arguments 
+#' ## Checks for Command Line Arguments
+#' The following statements are used to check whether required arguments
 #' have been assigned with a non-empty value
 #+ argument-test, eval=FALSE
 if test "$a_example" == ""; then
@@ -100,5 +105,10 @@ fi
 #' ## End of Script
 #+ end-msg, eval=FALSE
 end_msg $SCRIPT
+
+
+#' ## Latest Update
+#+ latest-update, eval=TRUE
+date
 
 
