Site for release 0.2.1

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,6 +3,7 @@ pkgdown: 1.4.1
 pkgdown_sha: ~
 articles:
   comparison_plot_report: comparison_plot_report.html
+  comparison_plots: comparison_plots.html
   qgert_getting_started: qgert_getting_started.html
   spin_bash_script: spin_bash_script.html
 
