--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
 Description: Results of routine genetic evaluations are post-processed to generate different reports
     for quality assurance. The validity of the results of a given analysis is assessed by a comparison 
     to the results of a previous analysis. This package provides a number of tools for such comparisons.
-License: MIT + file LICENSE
+License: GPL (>= 2)
 Encoding: UTF-8
 Language: en
 LazyData: true
@@ -18,6 +18,16 @@ BugReports: https://github.com/pvrqualitasag/qgert/issues
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    rmdhelp (>= 0.1.0)
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
+Imports: 
+    dplyr,
+    readr,
+    sessioninfo,
+    ggplot2,
+    R.utils,
+    fs,
+    glue,
+    log4r
