--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(create_ge_compare_plot_report_cnvrh)
 export(create_ge_compare_plot_report_fbk)
+export(create_ge_compare_plot_report_gal)
 export(create_ge_compare_plot_report_itb)
 export(create_ge_compare_plot_report_lbe)
 export(create_ge_compare_plot_report_lbe_rh)
