--- a/inst/templates/bash/bash_script_ut.template
+++ b/inst/templates/bash/bash_script_ut.template
@@ -9,6 +9,8 @@
 #'
 #' ## Description
 #' {Write a paragraph about how the problems are solved.}
+#'
+#' ## Bash Settings
 #+ bash-env-setting, eval=FALSE
 set -o errexit    # exit immediately, if single command exits with non-zero status
 set -o nounset    # treat unset variables as errors
