--- a/inst/templates/bash/bash_script_so.template
+++ b/inst/templates/bash/bash_script_so.template
@@ -27,10 +27,14 @@ BASENAME=/usr/bin/basename                 # PATH to basename function          
 DIRNAME=/usr/bin/dirname                   # PATH to dirname function                #
 
 #' ### Directories
+#' Installation directory of this script
 #+ script-directories, eval=FALSE
 INSTALLDIR=`$DIRNAME ${BASH_SOURCE[0]}`    # installation dir of bashtools on host   #
 
 #' ### Files
+#' This section stores the name of this script and the
+#' hostname in a variable. Both variables are important for logfiles to be able to
+#' trace back which output was produced by which script and on which server.
 #+ script-files, eval=FALSE
 SCRIPT=`$BASENAME ${BASH_SOURCE[0]}`       # Set Script Name variable                #
 SERVER=`hostname`                          # put hostname of server in variable      #
@@ -38,11 +42,10 @@ SERVER=`hostname`                          # put hostname of server in variable 
 
 
 #' ## Functions
-#' In this section user-defined functions that are specific for this script are
-#' defined in this section.
+#' The following definitions of general purpose functions are local to this script.
 #'
-#' * title: Show usage message
-#' * param: message that is shown
+#' ### Usage Message
+#' Usage message giving help on how to use the script.
 #+ usg-msg-fun, eval=FALSE
 usage () {
   local l_MSG=$1
@@ -55,7 +58,10 @@ usage () {
   exit 1
 }
 
-#' produce a start message
+#' ### Start Message
+#' The following function produces a start message showing the time
+#' when the script started and on which server it was started.
+#+ start-msg-fun, eval=FALSE
 #+ start-msg-fun, eval=FALSE
 start_msg () {
   $ECHO "********************************************************************************"
@@ -64,7 +70,10 @@ start_msg () {
   $ECHO
 }
 
-#' produce an end message
+#' ### End Message
+#' This function produces a message denoting the end of the script including
+#' the time when the script ended. This is important to check whether a script
+#' did run successfully to its end.
 #+ end-msg-fun, eval=FALSE
 end_msg () {
   $ECHO
@@ -72,7 +81,8 @@ end_msg () {
   $ECHO "********************************************************************************"
 }
 
-#' functions related to logging
+#' ### Log Message
+#' Log messages formatted similarly to log4r are produced.
 #+ log-msg-fun, eval=FALSE
 log_msg () {
   local l_CALLER=$1
