--- a/inst/templates/bash/bash_script_ut.template
+++ b/inst/templates/bash/bash_script_ut.template
@@ -28,7 +28,10 @@ DIRNAME=/usr/bin/dirname                   # PATH to dirname function           
 INSTALLDIR=`$DIRNAME ${BASH_SOURCE[0]}`    # installation dir of bashtools on host         #
 UTILDIR=__BASHTOOLUTILDIR__                # directory containing utilities of bashtools   #
 
-#' ### Files
+#' ### Files and Hostname
+#' This section stores the name of this script and the hostname in a variable. Both
+#' variables are important for logfiles to be able to trace back which output was
+#' produced by which script and on which server.
 #+ script-files, eval=FALSE
 SCRIPT=`$BASENAME ${BASH_SOURCE[0]}`       # Set Script Name variable                      #
 SERVER=`hostname`
