Building site for release 0.2.7

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,4 +6,5 @@ articles:
   comparison_plots: comparison_plots.html
   qgert_getting_started: qgert_getting_started.html
   spin_bash_script: spin_bash_script.html
+  split_gsruns_sorted_rt: split_gsruns_sorted_rt.html
 
