--- a/inst/templates/bash/bash_script_so.template
+++ b/inst/templates/bash/bash_script_so.template
@@ -10,7 +10,14 @@
 #' ## Description
 #' {Write a paragraph about how the problems are solved.}
 #'
-#' ## Bash Settings
+#' ## Details
+#' {Give some more details here.}
+#'
+#' ## Example
+#' {Specify an example call of the script.}
+#'
+#' ## Set Directives
+#' General behavior of the script is driven by the following settings
 #+ bash-env-setting, eval=FALSE
 set -o errexit    # exit immediately, if single command exits with non-zero status
 set -o nounset    # treat unset variables as errors
@@ -61,7 +68,6 @@ usage () {
 #' ### Start Message
 #' The following function produces a start message showing the time
 #' when the script started and on which server it was started.
-#+ start-msg-fun, eval=FALSE
 #+ start-msg-fun, eval=FALSE
 start_msg () {
   $ECHO "********************************************************************************"
@@ -154,7 +160,7 @@ fi
 
 #' ## Your Code
 #' Continue to put your code here
-
+#+ your-code-here
 
 
 
