--- a/inst/templates/bash/bash_script_so_regtest.template
+++ b/inst/templates/bash/bash_script_so_regtest.template
@@ -11,7 +11,14 @@
 #' ## Description
 #' {ADD_DESCRIPTION_HERE}
 #'
+#' ## Details
+#' {Give some more details here.}
 #'
+#' ## Example
+#' {Specify an example call of the script.}
+#'
+#' ## Set Directives
+#' General behavior of the script is driven by the following settings
 #+ env-set
 set -o errexit    # exit immediately, if single command exits with non-zero status
 set -o nounset    # treat unset variables as errors
