First commit of changes with new interface for compare plot wrapper create_ge_compare_plot_report_vrdggozw_prov

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,11 @@ pandoc: 2.3.1
 pkgdown: 1.4.1
 pkgdown_sha: ~
 articles:
+  alternative_compare_plot: alternative_compare_plot.html
   comparison_plot_report: comparison_plot_report.html
   comparison_plots: comparison_plots.html
+  compile_list_ebvfiles: compile_list_ebvfiles.html
+  gs_job_schedule: gs_job_schedule.html
   qgert_getting_started: qgert_getting_started.html
   spin_bash_script: spin_bash_script.html
   split_gsruns_sorted_rt: split_gsruns_sorted_rt.html
