--- a/inst/templates/bash/bash_script_so.template
+++ b/inst/templates/bash/bash_script_so.template
@@ -30,6 +30,7 @@ set -o pipefail   # return value of pipeline is value of last command to exit wi
 #+ shell-tools, eval=FALSE
 ECHO=/bin/echo                             # PATH to echo                            #
 DATE=/bin/date                             # PATH to date                            #
+MKDIR=/bin/mkdir                           # PATH to mkdir                           #
 BASENAME=/usr/bin/basename                 # PATH to basename function               #
 DIRNAME=/usr/bin/dirname                   # PATH to dirname function                #
 
