--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
-pandoc: 2.3.1
-pkgdown: 1.4.1
+pandoc: 2.7.3
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   alternative_compare_plot: alternative_compare_plot.html
@@ -10,4 +10,5 @@ articles:
   qgert_getting_started: qgert_getting_started.html
   spin_bash_script: spin_bash_script.html
   split_gsruns_sorted_rt: split_gsruns_sorted_rt.html
+last_built: 2020-06-24T15:13Z
 
