First version of package including R functions to create top list.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(create_ge_compare_plot_report_prod)
 export(create_ge_compare_plot_report_vrdggozw)
 export(create_ge_compare_plot_report_vrdggozw_prov)
 export(create_ge_plot_report)
+export(create_toplist_bvch_bull)
 export(get_qgert_logger)
 export(qgert_log_debug)
 export(qgert_log_error)
