--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,9 +6,10 @@ articles:
   comparison_plot_report: comparison_plot_report.html
   comparison_plots: comparison_plots.html
   compile_list_ebvfiles: compile_list_ebvfiles.html
+  create_toplist_bull_bvch: create_toplist_bull_bvch.html
   gs_job_schedule: gs_job_schedule.html
   qgert_getting_started: qgert_getting_started.html
   spin_bash_script: spin_bash_script.html
   split_gsruns_sorted_rt: split_gsruns_sorted_rt.html
-last_built: 2020-06-24T15:13Z
+last_built: 2020-09-24T06:45Z
 
