with devtools::document() in console, update namespace with create_ge_compare_plot_report_weaning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(create_ge_compare_plot_report_nd)
 export(create_ge_compare_plot_report_prod)
 export(create_ge_compare_plot_report_vrdggozw)
 export(create_ge_compare_plot_report_vrdggozw_prov)
+export(create_ge_compare_plot_report_weaning)
 export(create_ge_plot_report)
 export(create_toplist_bvch_bull)
 export(get_qgert_logger)
