--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(age_in_days)
 export(create_ge_compare_plot_report_birth)
+export(create_ge_compare_plot_report_carcass)
 export(create_ge_compare_plot_report_cas)
 export(create_ge_compare_plot_report_cnvrh)
 export(create_ge_compare_plot_report_fbk)
