--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(create_ge_compare_plot_report_lbe_rh)
 export(create_ge_compare_plot_report_mar)
 export(create_ge_compare_plot_report_nd)
 export(create_ge_compare_plot_report_prod)
+export(create_ge_compare_plot_report_tem_bv)
 export(create_ge_compare_plot_report_vrdggozw)
 export(create_ge_compare_plot_report_vrdggozw_prov)
 export(create_ge_compare_plot_report_weaning)
